Issue #23152: Renames attribute_data_to_stat to _Py_attribute_data_to_stat